fix: feature top spacing

--- a/assets/scss/components/slices/features.scss
+++ b/assets/scss/components/slices/features.scss
@@ -150,7 +150,8 @@
 @include device-is('large-screen') {
   .features {
     &__title h2 {
-      margin-top: 120px;
+      margin-top: 0;
+      padding-top: 120px;
     }
     &__wrapper {
       padding: 60px 0;
